k8s/backend-auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-auth
  template:
    metadata:
      labels:
        app: backend-auth
    spec:
      containers:
      - name: backend-auth
        image: samuelrak/travel:t-be-auth8
        ports:
        - containerPort: 5000
