k8s/frontendv2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontendv2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
      version: v2
  template:
    metadata:
      labels:
        app: frontend
        version: v2
    spec:
      containers:
      - name: frontendv2
        image: samuelrak/travel:t-fe6-v2
        ports:
        - containerPort: 4200
