k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
    version: v1
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 4200
