k8s/frontendv2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service2
spec:
  selector:
    app: frontend
    version: v2
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 4200
