k8s/web-be-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webpage-ingress-be
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
  #  nginx.ingress.kubernetes.io/affinity: cookie
  #  nginx.ingress.kubernetes.io/affinity-mode: balanced
  #  nginx.ingress.kubernetes.io/session-cookie-name: route
  #  nginx.ingress.kubernetes.io/session-cookie-expires: 30s
spec:
  ingressClassName: nginx
  rules:
    - host: mytravel-123.com
      http:
        paths:
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: backend-auth-service
                port:
                  number: 5000
          - path: /api/tours
            pathType: Prefix
            backend:
              service:
                name: backend-tours-service
                port:
                  number: 5000
