k8s/web2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webpage-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: mytravel-123.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: backend-auth-service
                port:
                  number: 5000
          - path: /api/tours
            pathType: Prefix
            backend:
              service:
                name: backend-tours-service
                port:
                  number: 5001
